1999-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-e20_2.el, poem-om.el
	(find-file-noselect-as-raw-text): Use `raw-text-dos' instead of
	`raw-text'.
	(insert-file-contents-as-raw-text): Likewise.

1999-02-14  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mcs-om.el (TopLevel): Don't refer to
	`running-emacs-19_29-or-later', use `emacs-major-version' and
	`emacs-minor-version' instead.

1999-02-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (file-name-sans-extension): New function <copied from
	Emacs 20.3.5> <cf. [tm-ja:4135]>.

1999-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-ltn1.el, poem-nemacs.el, poem-om.el
	(save-buffer-as-binary): New function.
	(save-buffer-as-raw-text-CRLF): New function.
	(save-buffer-as-coding-system): New function.

	* poem-om.el (poem-ccl-decode-raw-text): Rewrite again for plural
	`CR's.

1999-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-om.el (poem-ccl-decode-raw-text): Rewrite for fixing a bug
	that the last datum will be missed if the input data is not ended
	with `CRLF'.
	(poem-ccl-encode-raw-text-CRLF): Use `read-if'.

1998-12-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* install.el (install-detect-elisp-directory): Avoid problem if
	prefix of an emacs has its version.


1998-12-22  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.12 was released.

1998-12-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mcs-om.el: Avoid error when cyrillic.el is not found.

1998-12-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem-xm.el: Define coding-system `gb2312-dos', `gb2312-mac' and
	`gb2312-unix' if it is not found.

1998-12-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-om.el (poem-ccl-decode-raw-text): Renamed from
	`ccl-decode-raw-text'.
	(poem-ccl-encode-raw-text): Renamed from `ccl-encode-raw-text'.
	(poem-ccl-encode-raw-text-CRLF): Renamed from
	`ccl-encode-raw-text-CRLF`.

1998-12-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
